--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -61,3 +61,14 @@
 .admited{
   display: none;
 }
+
+#e{
+  background-color: #820303;
+}
+
+#e{
+  -webkit-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  transition: all 300ms ease;
+  background-color: #580404;
+}
