--- a/app/views/groups/_groupSerch.html.erb
+++ b/app/views/groups/_groupSerch.html.erb
@@ -17,5 +17,6 @@
     <li id="V4">Pogramación 'A'</li>
     <li id="V5">Pogramación 'B'</li>
     <li id="V6">Electrónica 'A'</li>
+    <li id="E">Sin lugar</li>
   </ul>
 </div>
