--- a/app/views/groups/generate.html.erb
+++ b/app/views/groups/generate.html.erb
@@ -22,7 +22,7 @@
             <span class="icon baseBox"></span>
             <div>
               <h2>Grupos de programación</h2>
-              <p>Alumnos: <%= Group.all.length %></p>
+              <p>Listando grupos: </p>
             </div>
           </div>
           <div class="info">
