--- a/app/views/public/admisions.html.erb
+++ b/app/views/public/admisions.html.erb
@@ -15,10 +15,12 @@
         </div>
       </div>
       <div class="actions">
+        <% if Group.all.length > 0 %>
         <span class="button baseBox" id="showGroups">
           <span class="icon-profile"></span>
           <h3>Elegir grupo</h3>
         </span>
+        <% end %>
       </div>
     </aside>
     <section class="content">
