--- a/app/views/groups/_admited.html.erb
+++ b/app/views/groups/_admited.html.erb
@@ -1,10 +1,55 @@
-<section class="content admited">
+<% i = 0 %>
+<% $turns.each do |t| %>
+  <% $specs.each do |s| %>
+    <% $g.each do |g| %>
+      <section class="content <%= "#{i}" %>">
+        <div>
+          <div class="subtitle baseBox">
+            <span class="icon-profile"></span>
+            <div>
+              <h2 id="specialityName"><%="#{s} '#{g}' #{t.capitalize}"%></h2>
+              <p>Mostrando grupo:</p>
+            </div>
+          </div>
+        </div>
+        <div class="info">
+          <table>
+            <thead>
+              <tr>
+                <th>No. list</th>
+                <th>Nombre</th>
+                <th>Examen de admisión</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% offset = 0 %>
+              <% @groups.where(turn: t, finalSpeciality: s, group: g).each do |a| %>
+              <% offset = offset + 1 %>
+                <tr>
+                  <td><%= offset %></td>
+                  <td><%= a.name %></td>
+                  <td><%= a.examMark %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </section>
+      <% i = i + 1 %>
+    <% end %>
+  <% end %>
+<% end %>
+<!-- Alumnos que no caben en su especialidad !-->
+<section class="content admited error">
   <div>
     <div class="subtitle baseBox">
       <span class="icon-profile"></span>
       <div>
-        <h2 id="specialityName"></h2>
-        <p>Mostrando grupo:</p>
+        <h2 id="specialityName">Sin especialidad</h2>
+        <p>Mostrando alumnos que fueron aceptados pero su primera y segunda especialidad están llenas:</p>
+        <p>
+        </p>
       </div>
     </div>
   </div>
@@ -15,17 +60,23 @@
           <th>No. list</th>
           <th>Nombre</th>
           <th>Examen de admisión</th>
-          <th colspan="3"></th>
+          <th>Promedio de secundaria</th>
+          <th>Grupo</th>
+          <th>Especialidad</th>
         </tr>
       </thead>
       <tbody>
         <% offset = 0 %>
-        <% @admisions.each do |a| %>
+        <% @groups.order("turn DESC", "finalSpeciality DESC").each do |a| %>
         <% offset = offset + 1 %>
           <tr>
             <td><%= offset %></td>
             <td><%= a.name %></td>
             <td><%= a.examMark %></td>
+            <td><%= a.schoolAverage %></td>
+            <td><%= a.group %></td>
+            <td><%= a.finalSpeciality %></td>
+            <td><%= a.turn %></td>
           </tr>
         <% end %>
       </tbody>
