--- a/app/views/public/_admited.html.erb
+++ b/app/views/public/_admited.html.erb
@@ -1,34 +1,47 @@
-<section class="content admited">
-  <div>
-    <div class="subtitle baseBox">
-      <span class="icon-profile"></span>
-      <div>
-        <h2 id="specialityName"></h2>
-        <p>Mostrando grupo:</p>
-      </div>
-    </div>
-  </div>
-  <div class="info">
-    <table>
-      <thead>
-        <tr>
-          <th>No. list</th>
-          <th>Nombre</th>
-          <th>Examen de admisión</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% offset = 0 %>
-        <% @admisions.each do |a| %>
-        <% offset = offset + 1 %>
-          <tr>
-            <td><%= offset %></td>
-            <td><%= a.name %></td>
-            <td><%= a.examMark %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-</section>
+<% i = 0 %>
+<%
+$turns = ["matutino", "vespertino"]
+$g = ["A", "B"]
+$specs = ["null", "Programación", "Administración de recursos humanos", "Electrónica", "Contabilidad", "Mantenimiento automotriz"]
+%>
+<% $turns.each do |t| %>
+  <% $specs.each do |s| %>
+    <% $g.each do |g| %>
+      <section class="content admited <%= "#{i}" %>">
+        <div>
+          <div class="subtitle baseBox">
+            <span class="icon-profile"></span>
+            <div>
+              <h2 id="specialityName"><%="#{s} '#{g}' #{t.capitalize}"%></h2>
+              <p>Mostrando grupo:</p>
+            </div>
+          </div>
+        </div>
+        <div class="info">
+          <table>
+            <thead>
+              <tr>
+                <th>No. list</th>
+                <th>Nombre</th>
+                <th>Examen de admisión</th>
+                <th colspan="3"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% offset = 0 %>
+              <% @groups.where(turn: t, finalSpeciality: s, group: g).each do |a| %>
+              <% offset = offset + 1 %>
+                <tr>
+                  <td><%= offset %></td>
+                  <td><%= a.name %></td>
+                  <td><%= a.examMark %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </section>
+      <% i = i + 1 %>
+    <% end %>
+  <% end %>
+<% end %>
