--- a/app/views/public/developers.html.erb
+++ b/app/views/public/developers.html.erb
@@ -37,7 +37,7 @@
               <li>-Josué Enrique Luna Palafox-</li>
               <li>-Sergio Antonio Becerra Cobián-</li>
             </ul>
-          </p>
+          </p>ass
         </div>
           <div class="subtitle baseBox">
             <h2>Contacto</h2>
