--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -20,6 +20,10 @@
               <span class="icon-profile"></span>
               <h3>Revisar grupos</h3>
             </span>
+            <a href="/groups/new" class="button baseBox ">
+              <span class="icon-plus"></span>
+              <h3>Agregar</h3>
+            </a>
             <span class="baseBox find">
             <%= form_tag '/search', :method => 'get' do %>
               <p>
