--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-  <h1>New Request</h1>
+  <h1>Recomendado</h1>
 
   <%= render 'form' %>
 
-  <%= link_to 'Back', requests_path %>
+  <%= link_to 'Back', groups_path %>
 <% else %>
   <%= render 'noSesion' %>
 <% end %>
