--- a/app/views/groups/_admited.html.erb
+++ b/app/views/groups/_admited.html.erb
@@ -49,7 +49,7 @@
     <div class="subtitle baseBox">
       <span class="icon-profile"></span>
       <div>
-        <h2 id="specialityName">Sin especialidad</h2>
+        <h2 id="specialityName">Mantenimiento automotriz</h2>
         <p>Mostrando alumnos que fueron aceptados pero su primera y segunda especialidad están llenas:</p>
         <p>
         </p>
