--- a/app/views/requests/_noSesion.html.erb
+++ b/app/views/requests/_noSesion.html.erb
@@ -11,7 +11,7 @@
       <div class="actions">
         <a href="/" class="button baseBox" id="import">
           <span class="icon-home"></span>
-          <h3>Ushcale!</h3>
+          <h3>Vueleve al inicio</h3>
         </a>
       </div>
     </aside>
