--- a/app/views/groups/search.html.erb
+++ b/app/views/groups/search.html.erb
@@ -37,6 +37,9 @@
                 <th>No. list</th>
                 <th>Nombre</th>
                 <th>Examen de admisión</th>
+                <th>Grupo</th>
+                <th>Especialidad</th>
+                <th>Turno</th>
                 <th colspan="3"></th>
               </tr>
             </thead>
@@ -48,6 +51,10 @@
                   <td><%= offset %></td>
                   <td><%= a.name %></td>
                   <td><%= a.examMark %></td>
+                  <td><%= a.group %></td>
+                  <td><%= a.finalSpeciality %></td>
+                  <td><%= a.turn %></td>
+
                 </tr>
               <% end %>
             </tbody>
